--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
-.result {
+body {
 	text-content: center;
+}
+
+.result {
+	margin: center;
+	text-content: center;
+}
+
+h1 {
+    color: #FFFF00;
+    text-shadow: 2px 2px #FF0000;
+    font-size: 2em;
 }
 
 .grid {
