--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-body {
-	text-align: center;
+body{
+        margin:0px;
+        padding:0px;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 }
 
 .results {
